// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project - Add Data - Filter Header should show a Reset All link when this not a "singled" filter 1`] = `
<pf-filter-header
  resetAll={[Function EventEmitter]}
  saveFilters={[Function EventEmitter]}
  singled="false"
>
  <div
    class="d-flex filter-header"
  >
    <div>
      <div>
        Jobs: 
        <strong>
          
        </strong>
      </div>
    </div>
    <div
      class="d-flex flex-row ml-auto"
    >
      
      <div
        class="reset-filters"
      >
         Reset All 
      </div>
      <div
        class="vertical-separator"
      />
      <div
        autoclose="false"
        class="save-filters"
        container="body"
        ng-reflect-auto-close="false"
        ng-reflect-container="body"
        ng-reflect-ngb-popover="[object Object]"
        ng-reflect-placement="bottom"
        ng-reflect-triggers="manual"
        placement="bottom"
        triggers="manual"
      >
         Save Filters 
      </div>
    </div>
  </div>
</pf-filter-header>
`;

exports[`Project - Add Data - Filter Header should show a formatted number of results 1`] = `
<pf-filter-header
  numberOfResults={[Function Number]}
  resetAll={[Function EventEmitter]}
  saveFilters={[Function EventEmitter]}
>
  <div
    class="d-flex filter-header"
  >
    <div>
      <div>
        Jobs: 
        <strong>
          3,500
        </strong>
      </div>
    </div>
    <div
      class="d-flex flex-row ml-auto"
    >
      
      <div
        class="reset-filters"
      >
         Reset All 
      </div>
      <div
        class="vertical-separator"
      />
      <div
        autoclose="false"
        class="save-filters"
        container="body"
        ng-reflect-auto-close="false"
        ng-reflect-container="body"
        ng-reflect-ngb-popover="[object Object]"
        ng-reflect-placement="bottom"
        ng-reflect-triggers="manual"
        placement="bottom"
        triggers="manual"
      >
         Save Filters 
      </div>
    </div>
  </div>
</pf-filter-header>
`;
